--- a/index.html
+++ b/index.html
@@ -17,35 +17,51 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
+        <div class = "container">
+          <div class= "row">
+            <div class="jumbotron col-md-12">
+  <h1>Thursday Demo</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tincidunt metus sit amet consequat blandit. In id diam nibh. Duis non pellentesque elit. Morbi condimentum consectetur augue, non viverra neque sodales quis. Donec gravida risus nec dui suscipit dignissim in in ante. Fusce vel vestibulum velit, sed lobortis orci. Curabitur vitae mollis tortor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam ornare urna rutrum, interdum arcu vitae, pretium dolor. Praesent in pellentesque velit, id ullamcorper turpis. Duis hendrerit condimentum mauris interdum facilisis. Nam hendrerit, urna ut accumsan ultricies, diam arcu hendrerit mauris, at faucibus metus mi in nibh. Quisque egestas erat in eleifend molestie.</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Launch Demo Model</a></p>
+    </div>
+  </div>
 
-    <!-- Indicates a successful or positive action -->
-<button type="button" class="btn btn-success">Success</button>
-
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Launch demo modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
+  <div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="http://placehold.it/350x350" alt="placehold.it">
+      <div class="caption">
+        <h3>Product A</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tincidunt metus sit amet consequat blandit. In id diam nibh. Duis non pellentesque elit. Morbi condimentum consectetur augue, non viverra neque sodales quis. Donec gravida risus nec dui suscipit dignissim in in ante. Fusce vel vestibulum velit, sed lobortis orci. Curabitur vitae mollis tortor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam ornare urna rutrum, interdum arcu vitae, pretium dolor. Praesent in pellentesque velit, id ullamcorper turpis. Duis hendrerit condimentum mauris interdum facilisis. Nam hendrerit, urna ut accumsan ultricies, diam arcu hendrerit mauris, at faucibus metus mi in nibh. Quisque egestas erat in eleifend molestie.</p>
+        <p><a href="#" class="btn btn-primary" role="button">Buy More</a></p>
+      
     </div>
   </div>
 </div>
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="http://placehold.it/350x350" alt="placehold.it">
+      <div class="caption">
+        <h3>Product B</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tincidunt metus sit amet consequat blandit. In id diam nibh. Duis non pellentesque elit. Morbi condimentum consectetur augue, non viverra neque sodales quis. Donec gravida risus nec dui suscipit dignissim in in ante. Fusce vel vestibulum velit, sed lobortis orci. Curabitur vitae mollis tortor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam ornare urna rutrum, interdum arcu vitae, pretium dolor. Praesent in pellentesque velit, id ullamcorper turpis. Duis hendrerit condimentum mauris interdum facilisis. Nam hendrerit, urna ut accumsan ultricies, diam arcu hendrerit mauris, at faucibus metus mi in nibh. Quisque egestas erat in eleifend molestie.</p>
+        <p><a href="#" class="btn btn-primary" role="button">Buy More</a>
+    </div>
+  </div>
+</div>
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="http://placehold.it/350x350" alt="placehold.it">
+      <div class="caption">
+        <h3>Product C</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tincidunt metus sit amet consequat blandit. In id diam nibh. Duis non pellentesque elit. Morbi condimentum consectetur augue, non viverra neque sodales quis. Donec gravida risus nec dui suscipit dignissim in in ante. Fusce vel vestibulum velit, sed lobortis orci. Curabitur vitae mollis tortor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam ornare urna rutrum, interdum arcu vitae, pretium dolor. Praesent in pellentesque velit, id ullamcorper turpis. Duis hendrerit condimentum mauris interdum facilisis. Nam hendrerit, urna ut accumsan ultricies, diam arcu hendrerit mauris, at faucibus metus mi in nibh. Quisque egestas erat in eleifend molestie.</p>
+        <p><a href="#" class="btn btn-primary" role="button">Buy More</a>
+      </div>
+  </div>
+</div>
+  
+
+
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
